@@ -10,9 +10,11 @@ import productstore.servlet.mapper.ProductMapper;
 
 import java.sql.SQLException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ProductServiceImpl implements ProductService {
+
+    private static final String PRODUCT_WITH_ID = "Product with ID ";
+    private static final String NOT_FOUND = " not found.";
     private final ProductDao productDao;
     private final ProductMapper productMapper;
 
@@ -32,7 +34,7 @@ public class ProductServiceImpl implements ProductService {
     public ProductOutputDTO getProductById(long id) throws SQLException {
         Product product = productDao.getProductById(id);
         if (product == null) {
-            throw new ProductNotFoundException("Product with ID " + id + " not found.");
+            throw new ProductNotFoundException(PRODUCT_WITH_ID + id + NOT_FOUND);
         }
         return productMapper.toProductOutputDTO(true, product);
     }
@@ -42,7 +44,7 @@ public class ProductServiceImpl implements ProductService {
         List<Product> products = productDao.getAllProducts();
         return products.stream()
                 .map(product -> productMapper.toProductOutputDTO(true, product))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -50,14 +52,14 @@ public class ProductServiceImpl implements ProductService {
         List<Product> products = productDao.getProductWithPagination(pageNumber, pageSize);
         return products.stream()
                 .map(product -> productMapper.toProductOutputDTO(true, product))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public void updateProduct(ProductInputDTO productInputDTO) throws SQLException {
         Product product = productMapper.toProduct(productInputDTO);
         if (productDao.getProductById(product.getId()) == null) {
-            throw new ProductNotFoundException("Product with ID " + product.getId() + " not found.");
+            throw new ProductNotFoundException(PRODUCT_WITH_ID + product.getId() + NOT_FOUND);
         }
         productDao.updateProduct(product);
     }
@@ -65,7 +67,7 @@ public class ProductServiceImpl implements ProductService {
     @Override
     public void deleteProduct(long id) throws SQLException {
         if (productDao.getProductById(id) == null) {
-            throw new ProductNotFoundException("Product with ID " + id + " not found.");
+            throw new ProductNotFoundException(PRODUCT_WITH_ID + id + NOT_FOUND);
         }
         productDao.deleteProduct(id);
     }
@@ -74,7 +76,7 @@ public class ProductServiceImpl implements ProductService {
     public ProductOutputDTO getProductWithOrdersById(long id) throws SQLException {
         Product product = productDao.getProductWithOrdersById(id);
         if (product == null) {
-            throw new ProductNotFoundException("Product with ID " + id + " not found.");
+            throw new ProductNotFoundException(PRODUCT_WITH_ID + id + NOT_FOUND);
         }
         return productMapper.toProductOutputDTO(true, product);
     }
